Adding local data

--- a/data/plusones.yaml
+++ b/data/plusones.yaml
@@ -1,4 +1,4 @@
 - Putting the Team First
-- Delivering +1 Internally and Externally
+- Delivering +1
 - Finding the Smartest Solution
 - Embracing the Challenge
