Updating local data

--- a/data/employees.yaml
+++ b/data/employees.yaml
@@ -2,6 +2,10 @@
   email: waquino@digitalbungalow.com
 - name: Casey Arnold
   email: carnold@digitalbungalow.com
+- name: Chris Barnhill
+  email: cbarnhill@digitalbungalow.com
+- name: Alberto Beltran
+  email: abeltran@digitalbungalow.com
 - name: Scott Berkley
   email: sberkley@digitalbungalow.com
 - name: Sean Cunningham
@@ -22,6 +26,8 @@
   email: ehegarty@digitalbungalow.com
 - name: Liz Leclair
   email: lleclair@digitalbungalow.com
+- name: Robin McGuire
+  email: rmcguire@digitalbungalow.com
 - name: Adam Patterson
   email: apatterson@digitalbungalow.com
 - name: Gordon Plutsky
