Adding new employee

--- a/data/employees.yaml
+++ b/data/employees.yaml
@@ -24,6 +24,8 @@
   email: egreenwood@digitalbungalow.com
 - name: Erin Hegarty
   email: ehegarty@digitalbungalow.com
+- name: Jonathan Iannacone
+  email: jiannacone@digitalbungalow.com
 - name: Liz Leclair
   email: lleclair@digitalbungalow.com
 - name: Robin McGuire
